[tool.poetry]
name = "caluma"
version = "12.2.4"
description = "Caluma Service providing GraphQL API"
homepage = "https://caluma.io"
repository = "https://github.com/projectcaluma/caluma"
documentation = "https://caluma.gitbook.io/"
authors = ["Caluma <info@caluma.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
]
include = ["CHANGELOG.md"]
exclude = ["caluma/**/tests"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
dateparser = "^1.2.1"
Django = ">=4.2,<5.3"
django-cors-headers = "^4.7.0"
django-environ = "^0.12.0"
django-filter = ">=23.5,<26.0"
django-localized-fields = "^6.7"
django-postgres-extra = "^2.0.8"
django-simple-history = "^3.8.0"
django-watchman = "^1.3.0"
djangorestframework = "^3.15.2"
graphene-django = "^3.2.2"
graphene = "^3.4.3"
graphql-core = "^3.2.6"
graphql-relay = "^3.2.0"
gunicorn = "^23.0.0"
idna = "^3.10"
minio = "^7.2.20"
psycopg = { extras = ["binary"], version = "^3.2.4" }
psycopg-binary = "^3.2.4"
pyjexl = "^0.3.0"
python-memcached = "^1.62"
requests = "^2.32.3"
urllib3 = ">=1.26.8,<3.0.0"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
# Dev dependencies are always pinned to an exact version (No caret or tilde
# matching) to ensure everyone uses the same version of the tools, especially
# linters & formatters
django-extensions = "4.1"
factory-boy = "3.3.3"
Faker = "37.8.0"
gitlint = "0.19.1"
pdbpp = "0.11.7"
pre-commit = "4.3.0"
pydocstyle = "6.3.0"
pytest = "8.4.2"
pytest-cov = "7.0.0"
pytest-django = "4.11.1"
pytest-env = "1.1.5"
pytest-factoryboy = "2.8.1"
pytest-freezer= "0.4.9"
pytest-mock = "3.15.0"
pytest-randomly = "3.16.0"
pytest-xdist = "3.8.0"
python-semantic-release = "7.34.6"
requests-mock = "1.12.1"
reuse = "5.1.1"
ruff = "0.13.0"
syrupy = "4.9.1"


[tool.isort]
skip = ["migrations", "snapshots"]
known_first_party = ["caluma"]
known_third_party = ["dateparser"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.pytest.ini_options]
addopts = "-n auto --reuse-db --randomly-seed=1521188766 --randomly-dont-reorganize"
DJANGO_SETTINGS_MODULE = "caluma.settings.django"
env = [
    "META_FIELDS=test-key,foobar",
    "OIDC_USERINFO_ENDPOINT=mock://caluma.io/openid/userinfo",
    "OIDC_BEARER_TOKEN_REVALIDATION_TIME=60",
    "LANGUAGES=en,de,fr",
    "ENABLE_HISTORICAL_API=true",
    "ENABLE_ACCESS_LOG=true",
    "ENABLE_HEALTHZ_ENDPOINT=true",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    # warning in python 3.12 about deprecation coming in 3.14. issue is with graphene
    "ignore:.*typing.ByteString.*deprecated and slated for removal in Python 3.14",
]

[tool.ruff]
exclude = [
    "migrations",
    "snapshots",
    ".venv",
]
line-length = 88

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "E501",
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D407", # Missing dashed underline after section
    "D406", # Section name should end with a newline
    "D203", # one-blank-line-before-class (docstring)
]
select = [
    "C9",
    "D",
    "E",
    "F",
    "W",
    "I",
]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.isort]
combine-as-imports = true


[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
]
omit = [
    "*/migrations/*",
    "*/apps.py",
    "manage.py",
    "caluma/settings_*.py",
    "caluma/wsgi.py",
    "migrate_to_prefixed_apps.py",
    "test_migrate_to_prefixed_apps.py",
]
show_missing = true

[tool.semantic_release]
version_source = "tag"
version_toml = ["pyproject.toml:tool.poetry.version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
