[options]
package = find:
python_requires = >=3.6, <4
install_requires =
    dateparser <2
    django ~= 2.2
    django-cors-headers <4
    django-environ <0.5
    django-extensions <4
    django-filter <3
    django-localized-fields <6
    django-postgres-extra <2
    djangorestframework <4
    django_simple_history <3
    graphene-django <=2.8.2
    idna <3
    minio <6
    psycopg2-binary <3
    pyjexl <0.3
    python-memcached <2
    requests <3
    urllib3 <2
    uwsgi <2.1

[flake8]
ignore =
    # whitespace before ':'
    E203,
    # too many leading ### in a block comment
    E266,
    # line too long (managed by black)
    E501,
    # Line break occurred before a binary operator (this is not PEP8 compatible)
    W503,
    # do not enforce existence of docstrings
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
    # needed because of https://github.com/ambv/black/issues/144
    D202,
max-line-length = 88
exclude = migrations snapshots
max-complexity = 10
doctests = False

[tool:isort]
skip=migrations,snapshots
known_first_party=caluma
known_third_party=dateparser
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[tool:pytest]
addopts = -n auto --reuse-db --randomly-seed=1521188766 --randomly-dont-reorganize
DJANGO_SETTINGS_MODULE = caluma.settings.django
env =
    META_FIELDS=test-key,foobar
    OIDC_USERINFO_ENDPOINT=mock://caluma.io/openid/userinfo
    OIDC_INTROSPECT_ENDPOINT=mock://caluma.io/openid/introspect
    OIDC_BEARER_TOKEN_REVALIDATION_TIME=60
    LANGUAGES=en,de,fr
    ENABLE_HISTORICAL_API=true
    ENABLE_ACCESS_LOG=true
filterwarnings =
    # switch this back to error::DeprecationWarning when we upgraded graphene-django
    ignore::DeprecationWarning
    error::PendingDeprecationWarning

[coverage:run]
source=.

[coverage:report]
fail_under=100
exclude_lines =
    pragma: no cover
    pragma: todo cover
    def __str__
    def __unicode__
    def __repr__
omit=
    */migrations/*
    */apps.py
    manage.py
    setup.py
    caluma/settings_*.py
    caluma/wsgi.py
    caluma/caluma_metadata.py
show_missing = True
